#pragma once
#include "IBaseEngineEmpty.h"

namespace base_engine {
class BaseEngineEmpty final : public IBaseEngineEmpty {
 private:
 public:
};
}  // namespace base_engine