#pragma once
#include "IBaseEngineRender.h"
namespace base_engine {
class RenderMof final : public IBaseEngineRender {
 public:
  RenderMof();
private:
};
}  // namespace base_engine