#pragma once
#include <Graphics/Sprite3D.h>

class Sprite
{
  Mof::CSprite3D sprite_;
 public:
    
};
