#pragma once
#include <vector>
#include <Graphics/DirectX11/DX11Texture.h>


class TextureFactory
{
  std::vector<Mof::CTexture*> map;
public:

};
